# entervio

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yml  nginx.conf  setup-dev.sh
.githooks/: commit-msg  prepare-commit-msg
back/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt  test_smart_search.py
back/alembic/: env.py
back/alembic/versions/: 1598313bc3fa_adding_example_response_column.py  1e9de12d8ee1_new_fields.py  23fbebd38c12_new_fields.py  42d60c907929_unique_email.py  5ff39abf69de_add_seed_data.py  66bc74123c8d_add_application_model.py  6adaa8e6a312_add_is_verified_to_user.py  71716a7b3994_decomposing_global_feedback.py  99f3cb284271_adding_token_usage_table.py  adf380e3bf6c_adding_applications_table.py  b8a08ff7347a_create_applications_table.py  cb4ac67be6f5_adding_token_usage_table.py  f6f2c4ab30e4_initial_migration_with_users_interviews_.py
back/app/: main.py
back/app/api/v1/: router.py
back/app/api/v1/endpoints/: applications.py  auth.py  background.py  candidates.py  interviews.py  jobs.py  resume.py  voice_chat.py
back/app/core/: auth.py  config.py  deps.py  prompt_manager.py  scheduler.py
back/app/db/: database.py
back/app/graphs/: job_search.py
back/app/mcp/: server.py
back/app/models/: __init__.py  application.py  application_create.py  candidate.py  comment.py  feedback.py  france_travail_params.py  interview.py  question_answer.py  resume_models.py  token_usage.py  user.py
back/app/prompts/: prompts.yaml
back/app/schemas/: __init__.py  analysis.py  interview.py  resume.py  user.py
back/app/services/: __init__.py  applications_service.py  background_tasks.py  dspy_job_service.py  francetravail_service.py  grading_service.py  interview_service.py  llm_service.py  location_service.py  ranking_service.py  resume_analyzer_service.py  resume_service.py  smart_job_service.py  voice_service.py
back/app/templates/: cover_letter.typ
back/tests/: test_candidate_flow.py  verify_resume_parser_service.py
front/: Dockerfile  biome.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
front/app/: app.css  entry.client.tsx  root.tsx  routes.ts
front/app/components/: CityAutocomplete.tsx  FeedbackContent.tsx  InterviewContext.tsx
landing/: Dockerfile  package.json
landing/app/: app.css
(+38 files in other folders)
