[project]
name = "back"
version = "0.1.0"
description = "Entervio Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2.3",
    "alembic",
    "aiosqlite>=0.20.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.8.0",
    "groq>=0.13.0",
    "websockets>=12.0",
    "edge-tts>=7.0.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "elevenlabs>=2.24.0",
    "pdfplumber>=0.11.0",
    "Requests>=2.32.0",
    "spacy>=3.8.0",
    "email-validator>=2.2.0",
    "numpy",
    "typst>=0.14.0",
    "fastmcp",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 88
target-version = "py311"  # adjust to your Python version

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
